0.8.8 (?/??/2013):
------------------

- The number of partition type codes has grown large enough that it fills
  an 80x24 display. I've therefore added a pause (with a prompt to hit
  <Enter>) to display more items after showing 21 lines in gdisk or after
  the screen has nearly filled with entries in cgdisk. There's no such
  pause/prompt in sgdisk, though.

- Fine-tuned verification ('v') check for 0xEE partition that doesn't begin
  on sector 1: Previously, a disk with multiple 0xEE partitions would
  always trigger this warning. Now, the warning occurs only if NONE of the
  0xEE partitions begins on sector 1.

- Fixed hybrid MBR creation on disks larger than 2TiB: Previously, if one
  opted to create an extra partition to cover unused space following
  hybridized partitions, gdisk would hang.

- Added check for an active/bootable 0xEE protective partition to the
  verify ('v') function. If found, this is not counted as an error, but
  it is called out to the user, since it can cause some EFIs (such as
  VirtualBox's EFI) to ignore the disk.

0.8.7 (7/8/2013):
-----------------

- Modified Mac version so that it can work on /dev/rdisk* devices as well
  as /dev/disk* devices. The result is that, when using the /dev/rdisk*
  devices, the partition table can sometimes be re-read without removing
  the disk or rebooting.

- Added "-a" option to cgdisk to use a ">" symbol to the left of the
  selected partition rather than ncurses highlighting.

- Modified "converting MBR to GPT" message to clarify that the conversion
  is being held in memory, since some people have mistakenly assumed that a
  "gdisk -l" operation will change an MBR disk to a GPT disk without
  prompting.

- Added partition type code for freedesktop.org's proposed $BOOT partition
  (bc13c2ff-59e6-4262-a352-b275fd6f7172; GPT fdisk type code EA00)

- Adjusted alignment code when using -n or -N in sgdisk to keep the
  requested partition size (if specified using +###{MGT} terminology)